essai enregistrement premier passage pour permettre step back